--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,19 @@
 [package]
-name = "phy-geom2"
+name = "geom2"
 version = "0.1.0"
-edition.workspace = true
+edition = "2024"
 description = "2D geometry primitives and utilities"
-authors.workspace = true
-license.workspace = true
-homepage.workspace = true
-repository.workspace = true
-documentation = "https://docs.rs/phy-geom2"
+authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
+license = "MIT"
+homepage = "https://github.com/agerasev/geom2"
+repository = "https://github.com/agerasev/geom2"
+documentation = "https://docs.rs/geom2"
 
 [dependencies]
-glam.workspace = true
+glam = { version = "0.31.0", default-features = false, features = [
+    "nostd-libm",
+] }
 
 [dev-dependencies]
 approx = "0.5.1"
-glam = { workspace = true, features = ["approx"] }
+glam = { version = "0.31.0", features = ["approx"] }
