--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ documentation = "https://docs.rs/geom2"
 glam = { version = "0.31.0", default-features = false, features = [
     "nostd-libm",
 ] }
+either = { version = "1.15.0", default-features = false }
 
 [dev-dependencies]
 approx = "0.5.1"
